--- a/typescript/slide/src/style.css
+++ b/typescript/slide/src/style.css
@@ -37,6 +37,7 @@ h1 {
   grid-area: 1/1;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  position: relative;
 }
 
 #slide-controls button {
@@ -44,4 +45,40 @@ h1 {
   appearance: none;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   cursor: pointer;
+}
+
+#slide-thumb {
+  display: flex;
+  position: absolute;
+  width: 100%;
+  pointer-events: none;
+}
+
+#slide-thumb > span {
+  flex: 1;
+  display: block;
+  height: 4px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 5px;
+  border-radius: 4px;
+  overflow: hidden;
+  isolation: isolate;
+}
+
+#slide-thumb .thumb-item.active {
+  display: block;
+  height: inherit;
+  background-color: rgba(255, 255, 255, 0.9);
+  transform: translateX(-100%);
+  animation: thumb forwards linear running;
+}
+
+#slide-thumb .thumb-item.paused {
+  animation-play-state: paused;
+}
+
+@keyframes thumb {
+  to {
+    transform: initial;
+  }
 }
