--- a/react-typescript/ac-fintech/src/styles.css
+++ b/react-typescript/ac-fintech/src/styles.css
@@ -81,8 +81,47 @@ ul {
   display: grid;
   padding: var(--gap);
   gap: var(--gap);
+  grid-template-columns: 240px auto;
 }
 
+/* sidenav */
+.sidenav li {
+  display: flex;
+  align-items: center;
+  gap: var(--gap-s);
+}
+
+.sidenav li span {
+  width: 2rem;
+  height: 2rem;
+  background-color: var(--color-4);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: var(--gap);
+}
+
+.sidenav li a {
+  flex: 1;
+  font-size: 1.125rem;
+  text-decoration: none;
+  color: var(--color-1);
+  padding: var(--gap-s);
+}
+
+.sidenav li:hover span {
+  background: var(--color-3);
+}
+
+
+/* daterange */
+.daterange {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: var(--gap);
+}
+
+/* summary */
 .summary {
   font-size: 1.5rem;
   font-weight: 600;
@@ -94,6 +133,7 @@ ul {
   color: var(--color-1);
 }
 
+/* sale */
 .sale {
   display: grid;
   grid-template-columns: auto auto 1fr;
